# rust-amqp-to-mysql-consumer

./: .env.dist  Cargo.toml  docker-compose.yml
src/: main.rs
