[package]
name = "rust-amqp-to-mysql-consumer"
version = "0.1.0"
authors = ["Wojciech Guła <gulasz101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.3"
#futures = "0.3.14"
futures-lite = "1.11.3"
async-global-executor = "2.0.2"
lapin = "1.7.0"
mysql = "20.1.0"
